--- a/SSHPROJECT/talend.project
+++ b/SSHPROJECT/talend.project
@@ -277,17 +277,6 @@
       <relatedItems xmi:id="_KLlt2Tj2EeaPeISHjtjoIA" id="TalendDate" version="Latest" type="routine"/>
       <relatedItems xmi:id="_KLlt2jj2EeaPeISHjtjoIA" id="Mathematical" version="Latest" type="routine"/>
     </ItemsRelations>
-    <ItemsRelations xmi:id="_wYRewDkLEea6rMQUBvBvOw">
-      <baseItem xmi:id="_wYRewTkLEea6rMQUBvBvOw" id="_umkLsDLYEeaZH5-RUyZcGQ" version="0.1" type="job"/>
-      <relatedItems xmi:id="_wYRewjkLEea6rMQUBvBvOw" id="Numeric" version="Latest" type="routine"/>
-      <relatedItems xmi:id="_wYRewzkLEea6rMQUBvBvOw" id="Relational" version="Latest" type="routine"/>
-      <relatedItems xmi:id="_wYRexDkLEea6rMQUBvBvOw" id="TalendString" version="Latest" type="routine"/>
-      <relatedItems xmi:id="_wYRexTkLEea6rMQUBvBvOw" id="DataOperation" version="Latest" type="routine"/>
-      <relatedItems xmi:id="_wYRexjkLEea6rMQUBvBvOw" id="StringHandling" version="Latest" type="routine"/>
-      <relatedItems xmi:id="_wYRexzkLEea6rMQUBvBvOw" id="TalendDataGenerator" version="Latest" type="routine"/>
-      <relatedItems xmi:id="_wYReyDkLEea6rMQUBvBvOw" id="TalendDate" version="Latest" type="routine"/>
-      <relatedItems xmi:id="_wYReyTkLEea6rMQUBvBvOw" id="Mathematical" version="Latest" type="routine"/>
-    </ItemsRelations>
     <ItemsRelations xmi:id="_7TfyIDn7EeamYLKy7ndMJA">
       <baseItem xmi:id="_7TfyITn7EeamYLKy7ndMJA" id="_4mhOgDn7EeamYLKy7ndMJA" version="0.1" type="job"/>
       <relatedItems xmi:id="_7TfyIjn7EeamYLKy7ndMJA" id="SQLike" version="Latest" type="routine"/>
@@ -648,8 +637,8 @@
     <migrationTask xmi:id="_x2IwwzeTEeaQ7paLDMqmyQ" id="org.talend.mdm.workbench.serverexplorer.migration.UnifyPasswordEncryption4MDMServerDefMigrationTask" breaks="6.0.0" version="6.0.0" status="noimpact"/>
     <migrationTask xmi:id="_W2yiUTnsEeau6KZO38ozXA" id="org.talend.repository.hadoopcluster.migration.AdaptDeprecatedHadoopVersionsMigrationTask" breaks="6.0.0" version="6.1.2" status="noimpact"/>
     <migrationTask xmi:id="_W2yiUjnsEeau6KZO38ozXA" id="org.talend.repository.model.migration.AddDefaultVersionValueForElasticsearchLookupInput" breaks="6.2.0" version="6.2.1" status="ok"/>
-    <migrationTask xmi:id="_0h-hgDrsEeaER6vZ6IwNCA" id="org.talend.repository.model.migration.FixProjectResourceLink" breaks="5.1.1" version="5.1.2" status="noimpact"/>
-    <migrationTask xmi:id="_0h-hgTrsEeaER6vZ6IwNCA" id="org.talend.repository.model.migration.AutoUpdateRelationsMigrationTask" breaks="5.1.1" version="5.1.2" status="ok"/>
+    <migrationTask xmi:id="_2rJYADrtEeaER6vZ6IwNCA" id="org.talend.repository.model.migration.FixProjectResourceLink" breaks="5.1.1" version="5.1.2" status="noimpact"/>
+    <migrationTask xmi:id="_2rJYATrtEeaER6vZ6IwNCA" id="org.talend.repository.model.migration.AutoUpdateRelationsMigrationTask" breaks="5.1.1" version="5.1.2" status="ok"/>
   </TalendProperties:Project>
   <TalendProperties:User xmi:id="_RvWDYjLFEeaiKMz9xNanVQ" login="user@user.com" firstName="user" lastName="user" type="DI" additionnalData="{}"/>
   <TalendProperties:User xmi:id="_paiLsTLYEeaZH5-RUyZcGQ" login="admin@company.com" firstName="admin" lastName="admin" type="DI" additionnalData="{}"/>
